--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -41,7 +41,6 @@
   margin: 2rem;
   width: 3vw;
   height: 5vh;
-  color: black;
   
 }
 
@@ -60,6 +59,7 @@
 }
 
 a{
+  text-decoration: none;
   padding: 2rem;
 }
 
